<?xml version="1.0"?>
<package format="2">
  <name>deadreckoning</name>
  <version>0.0.1</version>
  <description>The deadreckoning package</description>

  <maintainer email="s3515023@campus.nias.ac.jp">Kazuya Hamaguchi</maintainer>

  <license>Apache 2.0</license>

  <url type="website">https://github.com/KazuyaHamaguchi/NDT18</url>

  <author email="s3515023@campus.nias.ac.jp">Kazuya Hamaguchi</author>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>rostime</build_depend>
  
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>rostime</build_export_depend>
  
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
  </export>
</package>
